--- a/templates/vhost.wsgi.conf.j2
+++ b/templates/vhost.wsgi.conf.j2
@@ -1,6 +1,10 @@
 
 {% if item.value.aliases is defined and item.value.aliases|length > 0 %}
+{% if item.value.applicationgroup %}
+WSGIProcessGroup {{ item.value.applicationgroup }}
+{% else %}
 WSGIProcessGroup {{ item.key }}
+{% endif %}
 {% for scriptalias in item.value.aliases %}
 WSGIScriptAlias {{ scriptalias.location }} {{ scriptalias.target }}
 
