--- a/templates/vhost.wsgi.conf.j2
+++ b/templates/vhost.wsgi.conf.j2
@@ -1,6 +1,6 @@
 
 {% if item.value.aliases is defined and item.value.aliases|length > 0 %}
-{% if item.value.applicationgroup %}
+{% if item.value.applicationgroup is defined %}
 WSGIProcessGroup {{ item.value.applicationgroup }}
 {% else %}
 WSGIProcessGroup {{ item.key }}
@@ -10,9 +10,9 @@ WSGIScriptAlias {{ scriptalias.location }} {{ scriptalias.target }}
 
 {% endfor %}
 {% endif %}
-{% if item.value.python_home %}
+{% if item.value.python_home is defined %}
 WSGIPythonHome {{ item.value.python_home }}
 {% endif %}
-{% if item.value.python_path %}
+{% if item.value.python_path is defined %}
 WSGIPythonPath {{ item.value.python_path }}
 {% endif %}
