--- a/templates/wsgi.conf.j2
+++ b/templates/wsgi.conf.j2
@@ -18,7 +18,8 @@ WSGISocketPrefix /dev/shm/wsgi
 
 {% if wsgi_apps is defined and wsgi_apps|length > 0 %}
 {% for vhost, wsgi_config in wsgi_apps.items() %}
-WSGIDaemonProcess {{ vhost }} processes={{ wsgi_config.processes }} threads={{ wsgi_config.threads }} user={{ wsgi_config.user }} group={{ wsgi_config.group }} umask={{ wsgi_config.umask }}
+
+WSGIDaemonProcess {{ vhost }} processes={{ wsgi_config.processes }} threads={{ wsgi_config.threads }} user={{ wsgi_config.user }} group={{ wsgi_config.group }} umask={{ wsgi_config.umask }}{% if wsgi_config.python_home is defined %} python-home={{ wsgi_config.python_home }}{% endif %}{% if wsgi_config.python_path is defined %} python-path={{ wsgi_config.python_path }}{% endif %}
 
 {% endfor %}
 {% endif %}
