separate vhost and daemon config, better naming
By separating daemon and vhost config, we can now have multiple applications running on different daemons in one vhost config.

--- a/templates/vhost.wsgi.conf.j2
+++ b/templates/vhost.wsgi.conf.j2
@@ -1,12 +1,6 @@
 
 {% if item.value.aliases is defined and item.value.aliases|length > 0 %}
-{% if item.value.applicationgroup is defined %}
-WSGIProcessGroup {{ item.value.applicationgroup }}
-{% else %}
-WSGIProcessGroup {{ item.key }}
-{% endif %}
 {% for scriptalias in item.value.aliases %}
-WSGIScriptAlias {{ scriptalias.location }} {{ scriptalias.target }}
-
+WSGIScriptAlias {{ scriptalias.location }} {{ scriptalias.target }} process-group={{ item.value.processgroup|default('%GLOBAL') }} application-group={{ item.value.applicationgroup|default('%RESOURCE') }}
 {% endfor %}
 {% endif %}
