move applicationgroupa and processgroup to be per alias

--- a/templates/vhost.wsgi.conf.j2
+++ b/templates/vhost.wsgi.conf.j2
@@ -1,6 +1,6 @@
 
 {% if item.value.aliases is defined and item.value.aliases|length > 0 %}
 {% for scriptalias in item.value.aliases %}
-WSGIScriptAlias {{ scriptalias.location }} {{ scriptalias.target }} process-group={{ item.value.processgroup|default('%GLOBAL') }} application-group={{ item.value.applicationgroup|default('%RESOURCE') }}
+WSGIScriptAlias {{ scriptalias.location }} {{ scriptalias.target }} process-group={{ scriptalias.processgroup|default('%GLOBAL') }} application-group={{ scriptalias.applicationgroup|default('%RESOURCE') }}
 {% endfor %}
 {% endif %}
