Don't write bytecode by default

--- a/templates/10-wsgi-settings.conf.j2
+++ b/templates/10-wsgi-settings.conf.j2
@@ -1,5 +1,5 @@
 # {{ ansible_managed }}
-
+WSGIDontWriteBytecode {{ wsgi_dont_write_bytecode }}
 {% if not wsgi_embedded %}
 WSGIRestrictEmbedded on
 {% endif %}
